<resources>
    <string name="app_name">Technical Task Android</string>

    <string name="t_add_new_user">Add a New User</string>
    <string name="t_remove_user">Remove User</string>

    <string name="d_yes">Yes</string>
    <string name="d_cancel">Cancel</string>

    <string name="d_label_name">Name:</string>
    <string name="d_label_email">Email:</string>
    <string name="d_label_gender">Gender:</string>

    <string name="d_add_description">In order to add a new user, please supply the following information.</string>
    <string name="d_hint_name">Name</string>
    <string name="d_hint_email">Email</string>
    <string name="d_hint_gender">Gender</string>
    <string name="d_add_user">Add User</string>

    <string name="d_add_user_success"> was successfully added!</string>

    <string name="d_remove_user_query">Are you sure you want to remove this user?</string>
    <string name="d_remove_user_success">User was successfully removed!</string>

    <string name="d_demo_name">Lone Star</string>
    <string name="d_demo_email">lone_star@nospaceballs.com</string>
    <string name="d_demo_gender">Male</string>
</resources>